scss/layout/_layout.scss
html {
  overflow-x: hidden;
}

* {
  min-width: 0;
}

.main-content {
  background-color:#fff;
}

img.leading-image {
  width: 100%;
}

body {
  overflow-x: hidden;
}

@if $enable-flex {
  body {
    @include display-flex(flex);
    min-height: 100vh;
    @include flex-direction(column);
  }

  main {
    @include flex-grow(1);
    background-color: #fff;
    @include display-flex(flex);
    width: 100%;
  }


  main > .row {
    @include flex-grow(1);
  }
  
  @media screen and (min-width:0\0) {
    body, main {
      display: block;
    }
  }
}

